fix scroll when click other page bug, fix image dialog on mobile UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,11 +16,6 @@
   pointer-events: none;
 }
 
-html {
-  --scroll-behavior: smooth!important;
-  scroll-behavior: smooth!important;
-}
-
 body::-webkit-scrollbar-track, div::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
